added the form, working on layout

--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,20 @@
     <div class="second">
         <form action="" method="get">
             <p>Let's do this!</p>
-            <label for="fname"></label>
+            <div id="form1">
+            <label for="fname">FIRST NAME</label>
+            <input type="text" id="fname" name="fname"><br><br>
+            <label for="lname">LAST NAME</label>
+            <input type="text" id="lname" name="lname"><br><br>
+            <label for="email">EMAIL</label>
+            <input type="email" id="email" name="email"><br><br>
+            <label for="phoneno">PHONE NO.</label>
+            <input type="number" id="num" name="num"><br><br>
+            <label for="pass">PASSWORD</label>
+            <input type="text" id="pass" name="pass"><br><br>
+            <label for="cpass">CONFIRM PASSWORD</label>
+            <input type="text" id="cpass" name="cpass"><br><br>
+            </div>
         </form>
     </div>
     <div class="third">
