finally created and laid out the form, not happy with the laying out section, will come back to it once I'm a better programmer, and give it the finish is deserves

--- a/index.htm
+++ b/index.htm
@@ -16,22 +16,40 @@
             <p id="para2">You <em>know</em> you want to.</p>
             </p>
         </div>
-    <div class="second">
+        <div class="second">
+        <p>Let's do this!</p>
         <form action="" method="get">
-            <p>Let's do this!</p>
             <div id="form1">
+            <div class="row1">
+            <div class="elem">
             <label for="fname">FIRST NAME</label>
-            <input type="text" id="fname" name="fname"><br><br>
+            <input type="text" id="fname" name="fname">
+            </div>
+            <div class="elem">
             <label for="lname">LAST NAME</label>
-            <input type="text" id="lname" name="lname"><br><br>
+            <input type="text" id="lname" name="lname">
+            </div>
+            </div>
+            <div class="row2">
+            <div class="elem">
             <label for="email">EMAIL</label>
-            <input type="email" id="email" name="email"><br><br>
+            <input type="email" id="email" name="email">
+            </div>
+            <div class="elem">
             <label for="phoneno">PHONE NO.</label>
-            <input type="number" id="num" name="num"><br><br>
+            <input type="number" id="num" name="num">
+            </div>
+            </div>
+            <div class="row3">
+            <div class="elem">
             <label for="pass">PASSWORD</label>
-            <input type="text" id="pass" name="pass"><br><br>
+            <input type="text" id="pass" name="pass">
+            </div>
+            <div class="elem">
             <label for="cpass">CONFIRM PASSWORD</label>
-            <input type="text" id="cpass" name="cpass"><br><br>
+            <input type="text" id="cpass" name="cpass">
+            </div>
+            </div>
             </div>
         </form>
     </div>
