can call this done for now

--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,9 @@
 <body>
     <div id="image">
         <img src="halie-west-25xggax4bSA-unsplash.jpg" alt="An image of leaves">
+        <div class="logo">
+            <img src="odin-lined.png" alt="a pic of odin"><h3>ODIN</h3>
+        </div>
     </div>
     <div id="form">
         <div class="first">
